Fixing formatting